cleaning up the coe and trying to pass travis

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,1 +1,13 @@
 /* add home page styles here */
+/* body {
+    margin: auto;
+   
+    flex-direction: row-reverse;
+    background-color: black;
+}
+
+.products-container {
+    border: solid black 18px;
+
+} */
+
